optimized and added other tests